# Xtract

./: .gitignore  README.md  core_functionality_explanation.txt  pyproject.toml  requirements.txt  run_tests.py
config/: settings.yaml
config/evaluation/: completeness_check.yaml  consistency_check.yaml  context_complexity.yaml  exact_match.yaml  hallucination_detection.yaml  relevance_score.yaml  semantic_similarity.yaml
config/extraction/: contract_type.yaml  signing_party.yaml
config/model_params/: README.md  azure_openai.yaml  model_configs.yaml  openai.yaml
examples/: run_extraction.py
output/: extraction_summary.json
tests/: 01_test_data_loading.py  02_test_core_extraction.py  03_test_entity_extraction.py  04_test_evaluation.py  05_test_optimizations.py  06_test_databricks_mode.py  07_test_setup_validation.py  debug_extraction.py  debug_signing_party.py  run_tests.py  test_csv_data_loading.py  test_evaluation_integration.py  test_extractor_optimizations.py
xtract/: __init__.py
xtract/core/: __init__.py  chunker.py  evaluator.py  extractor.py
xtract/factory/: __init__.py  entity_factory.py
xtract/models/: __init__.py  providers.py
xtract/utils/: __init__.py  config_loader.py  io.py
